<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3ecf5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/maintv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/steps_tracked"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:max="200"
            android:progress="0"
            android:progressDrawable="@drawable/circle"
            android:rotation="180" />

        <TextView
            android:id="@+id/maintv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/step_progress"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="29sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/light_green"
            android:onClick="updateView"
            android:text="@string/update_goal"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_step_goal"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:textColorHint="@color/black"
            android:visibility="invisible" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>